<resources>
    <string name="app_name">Dr Made General Practice</string>

    <!-- for the main page -->
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="tagline">Your Health, \nOur Priority</string>
    <string name="tagline_info">24/7 Online Booking Available</string>
    <string name="logo_description">Dr Made surgeries logo</string>
    <string name="dr_made_description">Book appointments 24/7, access your medical records
    securely, and receive expert surgical care from our experienced medical professionals.</string>
    <string name="book_appointment_btn">Book Appointment</string>
    <string name="get_started_btn">Get Started  ></string>

    <!-- for the register page -->
    <string name="back_button">Back</string>
    <string name="create_account">Create Account</string>
    <string name="header_tagline">Join Dr Made Specialist Clinic Today</string>
    <string name="full_name">Full Name *</string>
    <string name="hint_full_name">Jane Doe</string>
    <string name="email">Email Address *</string>
    <string name="hint_email">janedoe@example.com</string>
    <string name="phone_number">Phone Number *</string>
    <string name="hint_phone_number">+27 76 673 0967</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="password">Password *</string>
    <string name="hint_password">Min. 8 characters</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="hint_confirm_password">Re-enter password</string>
    <string name="login_text">Already have an account? Login here</string>
    <string name="hint_date_of_birth">dd/mm/yyyy</string>


    <!-- for the medical aid section -->
    <string name="medical_aid_title">Medical Aid Information (Optional)</string>
    <string name="medical_aid_name">Medical Aid Provider</string>
    <string name="hint_provider">Select provider</string>
    <string name="membership_number">Membership Number</string>
    <string name="hint_membership_number">Enter number</string>

    <!-- Terms & conditions -->
    <string name="terms_and_conditions">I agree to the Terms of Service and Privacy.\nMy data will be handled in accordance with POPIA\nregulations.</string>
</resources>